# mcgpu-pet-wrapper

./: .gitignore  README.md  pyproject.toml  test.py
mcgpu_pet_wrapper/: __init__.py  config.py  data_reader.py  in_generator.py  phantoms.py  rebinning.py  runner.py  vox_io.py  voxel_grid.py
mcgpu_pet_wrapper/templates/: template.in  template.json
