[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgpu-pet-wrapper"
version = "0.2.2"
description = "A Python wrapper for the MCGPU-PET Monte Carlo PET simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

# --- packaging ---------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["mcgpu_pet_wrapper*"]

[tool.setuptools.package-data]
mcgpu_pet_wrapper = [
    "MCGPU-PET.x",
    "templates/*",
    "materials/*",
]
